--- a/frontpage.html
+++ b/frontpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <ul>
-    <a href=""> Home</a>>
+    <a href=""> Home</a>
     <a href=""> About Us</a>
     <a href=""> Contact Us</a>
 
