--- a/frontpage.html
+++ b/frontpage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About Us</a></li>
-    <li><a href="">Contact Us</a></li>
+    <a href="">Home</a>
+    <a href="">About Us</a>
+    <a href="">Contact Us</a>
 </ul>
 </html>
