--- a/frontpage.html
+++ b/frontpage.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="frontpage.css">
+</head>
 <ul>
     <a href="">Home</a>
     <a href="">About Us</a>
