--- a/frontpage.html
+++ b/frontpage.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="frontpage.css">
 </head>
-<ul>
-    <a href="">Home</a>
-    <a href="">About Us</a>
-    <a href="">Contact Us</a>
-</ul>
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
 </html>
