--- a/frontpage.html
+++ b/frontpage.html
@@ -5,10 +5,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="frontpage.css">
 </head>
+<body>
+<nav class="navbar navbar-dark bg-dark">
+  <div class="topnav">
+    <a href="#contact"><strong>CONTACT US</strong></a>
+    <a href="#about"><strong>ABOUT US</strong></a>
+    <a href="#home"><strong>HOME</strong></a>
+  </div>
+</nav>
+<table
+  <tr>
+    <td><h1>Dose GIVEN</h1></td>
+    <td><h1>FULLY VACCINATED</h1></td>
+    <td><h1>%POUPULATION</h1></td>
+  </tr>
+</table>
 
-<div class="topnav">
-  <a href="#contact"><strong>CONTACT US</strong></a>
-  <a href="#about"><strong>ABOUT US</strong></a>
-  <a href="#home"><strong>HOME</strong></a>
-</div>
+
+
+  <h2>150 M</h2>
+  <h1>FULLY VACCINATED</h1>
+  <h2>54.6 M</h2>
+  <h1>%POPULATION</h1>
+  <h2>16.64%</h2>
+  <h2>VACCINATION BY REGION</h2>
+
+
+
+</body>
 </html>
