--- a/frontpage.html
+++ b/frontpage.html
@@ -13,24 +13,30 @@
     <a href="#home"><strong>HOME</strong></a>
   </div>
 </nav>
-<table
+
+<div class="row">
+  <div clas="column">
+    <table class="center1">
+      <tr>
+        <td><h1>DOSE GIVEN</h1></td>
+        <td><h1>FULLY VACCINATED</h1></td>
+        <td><h1>%POPULATION</h1></td>
+      </tr>
+    </table>
+  </div>
+</div>
+
+<table class="center2">
   <tr>
-    <td><h1>Dose GIVEN</h1></td>
-    <td><h1>FULLY VACCINATED</h1></td>
-    <td><h1>%POUPULATION</h1></td>
-  </tr>
+    <td><h2>150M</h2></td>
+    <td><h2>54.6M</h2></td>
+    <td><h2>16.64%</h2></td>
+</tr>
 </table>
-
-
-
-  <h2>150 M</h2>
-  <h1>FULLY VACCINATED</h1>
-  <h2>54.6 M</h2>
-  <h1>%POPULATION</h1>
-  <h2>16.64%</h2>
-  <h2>VACCINATION BY REGION</h2>
-
-
-
+<p><strong>Vaccination By Region</strong></p>
+<a href="cal.html">CALIFORNIA</a>
+<a href="wa.html">WASHINGTON</a>
+<a href="fl.html">FLORIDA</a>
+<a href="ny.html">NEW YORK</a>
 </body>
 </html>
