change nav-bar to black

--- a/frontpage.html
+++ b/frontpage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="frontpage.css">
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-custom">
   <div class="topnav">
     <a href="#contact"><strong>CONTACT US</strong></a>
     <a href="#about"><strong>ABOUT US</strong></a>
