--- a/frontpage.html
+++ b/frontpage.html
@@ -14,8 +14,7 @@
   </div>
 </nav>
 
-<div class="row">
-  <div clas="column">
+
     <table class="center1">
       <tr>
         <td><h1>DOSE GIVEN</h1></td>
@@ -23,15 +22,15 @@
         <td><h1>%POPULATION</h1></td>
       </tr>
     </table>
-  </div>
-</div>
+
 
 <table class="center2">
   <tr>
-    <td><h2>150M</h2></td>
-    <td><h2>54.6M</h2></td>
-    <td><h2>16.64%</h2></td>
-</tr>
+    <!-- <td class="text"><h2>150M</h2></td> -->
+    <pre class="tab"><h2>     150M                            54.6M                                        16.64%</h2></pre>
+    <!-- <td class="text"><h2>54.6M</h2></td>
+    <tsd class="text"><h2>16.64%</h2></tsd> -->
+  </tr>
 </table>
 <p><strong>Vaccination By Region</strong></p>
 <a href="cal.html">CALIFORNIA</a>
