--- a/frontpage.html
+++ b/frontpage.html
@@ -15,11 +15,11 @@
 </nav>
 
 
-    <table class="center1">
+  <table class="center1">
       <tr>
-        <td><h1>DOSE GIVEN</h1></td>
-        <td><h1>FULLY VACCINATED</h1></td>
-        <td><h1>%POPULATION</h1></td>
+        <td><h1><strong>DOSE GIVEN</strong></h1></td>
+        <td><h1><strong>FULLY VACCINATED</strong></h1></td>
+        <td><h1><strong>%POPULATION</strong></h1></td>
       </tr>
     </table>
 
@@ -27,15 +27,22 @@
 <table class="center2">
   <tr>
     <!-- <td class="text"><h2>150M</h2></td> -->
-    <pre class="tab"><h2>     150M                            54.6M                                        16.64%</h2></pre>
+    <pre class="tab"><h2>    150M                                54.6M                                             16.64%</h2></pre>
     <!-- <td class="text"><h2>54.6M</h2></td>
     <tsd class="text"><h2>16.64%</h2></tsd> -->
   </tr>
 </table>
-<p><strong>Vaccination By Region</strong></p>
-<a href="cal.html">CALIFORNIA</a>
-<a href="wa.html">WASHINGTON</a>
-<a href="fl.html">FLORIDA</a>
-<a href="ny.html">NEW YORK</a>
+
+<div class="region">
+  <p><strong>Vaccination By Region</strong></p>
+</div>
+
+
+<div class="statelink">
+<a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a>
+<a href="wa.html"><strong><u>WASHINGTON</u></strong></a>
+<a href="fl.html"><strong><u>FLORIDA</u></strong></a>
+<a href="ny.html"><strong><u>NEW YORK</u></strong></a>
+</div>
 </body>
 </html>
