--- a/frontpage.html
+++ b/frontpage.html
@@ -4,24 +4,30 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="frontpage.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+
 <nav class="navbar navbar-custom">
-  <div class="topnav">
-    <a href="#contact"><strong>CONTACT US</strong></a>
-    <a href="#about"><strong>ABOUT US</strong></a>
-    <a href="#home"><strong>HOME</strong></a>
+  <div class="topnav-right">
+    <div>
+      <a href="#home"><strong>HOME</strong></a>
+      <a href="#about"><strong>ABOUT US</strong></a>
+      <a href="#contactus"><strong>CONTACT US</strong></a>  
+    </div>    
   </div>
+</div>
 </nav>
 
 
   <table class="center1">
-      <tr>
-        <td><h1><strong>DOSE GIVEN</strong></h1></td>
-        <td><h1><strong>FULLY VACCINATED</strong></h1></td>
-        <td><h1><strong>%POPULATION</strong></h1></td>
-      </tr>
-    </table>
+    <tr>
+      <td><h1><strong>DOSE GIVEN</strong></h1></td>
+      <td><h1><strong>FULLY VACCINATED</strong></h1></td>
+      <td><h1><strong>%POPULATION</strong></h1></td>
+    </tr>
+  </table>
 
 
 <table class="center2">
@@ -33,16 +39,29 @@
   </tr>
 </table>
 
-<div class="region">
-  <p><strong>Vaccination By Region</strong></p>
-</div>
-
+<p><strong>Vaccination By Region</strong></p>
 
 <div class="statelink">
+
 <a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a>
 <a href="wa.html"><strong><u>WASHINGTON</u></strong></a>
 <a href="fl.html"><strong><u>FLORIDA</u></strong></a>
-<a href="ny.html"><strong><u>NEW YORK</u></strong></a>
+<a href="tx.html"><strong><u>TEXAS</u></strong></a>
+<a href="pa.html"><strong><u>PENNSYLVANIA</u></strong></a>
+<a href="il.html"><strong><u>ILLINOIS</u></strong></a>
+<a href="nc.html"><strong><u>NORTH CAROLINA</u></strong></a>
+<a href="nj.html"><strong><u>NEW JERSEY</u></strong></a>
+<a href="ny.html"><strong><u>GEORGIA</u></strong></a>
+<a href="ma.html"><strong><u>MASSACHUSETTS</u></strong></a>
+<a href="az.html"><strong><u>ARIZONA</u></strong></a>
+<a href="wi.html"><strong><u>WISCONSIN</u></strong></a>
+<a href="ml.html"><strong><u>MARYLAND</u></strong></a>
+<a href="co.html"><strong><u>COLORADO</u></strong></a>
+<a href="ne.html"><strong><u>NEVADA</u></strong></a>
+<a href="ha.html"><strong><u>HAWAII</u></strong></a>
+<a href="ke.html"><strong><u>KENTUCKY</u></strong></a>
+<a href="ct.html"><strong><u>CONNECTICUT</u></strong></a>
+
 </div>
 </body>
 </html>
