--- a/frontpage.html
+++ b/frontpage.html
@@ -11,14 +11,13 @@
 
 
 <nav class="navbar navbar-custom">
-  <div class="topnav-right">
-    <div>
+  <div class="topnav">
+     <div class="topnav-right">
       <a href="#home"><strong>HOME</strong></a>
       <a href="#about"><strong>ABOUT US</strong></a>
-      <a href="#contactus"><strong>CONTACT US</strong></a>  
-    </div>    
+      <a href="#contactus"><strong>CONTACT US</strong></a>   
+    </div>
   </div>
-</div>
 </nav>
 
 
