--- a/frontpage.html
+++ b/frontpage.html
@@ -10,11 +10,50 @@
   <a class="active" href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a href="contactUs.html">Contact Us</a>
+  <a href="#Regions">Region<a>
 </div>
 
 <div style="padding-left:16px">
   <h2>Top Navigation with Right Aligned Links</h2>
-  <p>Some content..</p>
+</div>
+
+<table>
+  <tr class="header">
+    <th>DOSE GIVEN</th>
+    <th>FULLY VACCINATED</th>
+    <th>% POPULATION</th>
+  </tr>
+  <tr class="number">
+    <td>167M</td>
+    <td>62.4M</td>
+    <td>19.0%</td>
+  </tr>
+</table>
+
+<p>Vaccination By Region</p>
+
+
+<div class="statelink">
+
+  <a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a>
+  <a href="wa.html"><strong><u>WASHINGTON</u></strong></a>
+  <a href="fl.html"><strong><u>FLORIDA</u></strong></a>
+  <a href="tx.html"><strong><u>TEXAS</u></strong></a>
+  <a href="pa.html"><strong><u>PENNSYLVANIA</u></strong></a>
+  <a href="il.html"><strong><u>ILLINOIS</u></strong></a>
+  <a href="nc.html"><strong><u>NORTH CAROLINA</u></strong></a>
+  <a href="nj.html"><strong><u>NEW JERSEY</u></strong></a>
+  <a href="ny.html"><strong><u>GEORGIA</u></strong></a>
+  <a href="ma.html"><strong><u>MASSACHUSETTS</u></strong></a>
+  <a href="az.html"><strong><u>ARIZONA</u></strong></a>
+  <a href="wi.html"><strong><u>WISCONSIN</u></strong></a>
+  <a href="ml.html"><strong><u>MARYLAND</u></strong></a>
+  <a href="co.html"><strong><u>COLORADO</u></strong></a>
+  <a href="ne.html"><strong><u>NEVADA</u></strong></a>
+  <a href="ha.html"><strong><u>HAWAII</u></strong></a>
+  <a href="ke.html"><strong><u>KENTUCKY</u></strong></a>
+  <a href="ct.html"><strong><u>CONNECTICUT</u></strong></a>
+  
 </div>
 
 </body>
