--- a/fl.html
+++ b/fl.html
@@ -1,146 +1,22 @@
-body {
-    margin: 0;
-    height: 100%;
-} 
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="frontpage.css">
+</head>
 
-/* .topnav a {
-  /* color:white;
-  text-align: center; */
-  /* padding: 30px 60px;  */
-  /* padding: 1vw;
-  padding: 1vh;
-  padding: 1vmin;
-  padding: 1vmax;
-  border-radius: 5px;
-  border: 5px; 
-  text-decoration: none;
-  font-family:"Courier New";
-  font-size: 20px; */
-  /* float: right; */
-  /* margin-top: 0px; */
-/* 
-.navbar {
-  height: 100px;
-}
-.navbar-custom {
-  width: 100%;
-  height: 10%;
-  background-color: black;
-}
+<body>
+<div class="topnav">
+  <a href="frontpage.html">Home</a>
+  <a href="aboutUs.html">About Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="#Regions">Region<a>
+</div>
 
-.bg-dark {
-  background-color: black;
-} */
+<div style="padding-left:16px">
+  <h2>FLORIDA</h2>
+  <!-- <p>Some content..</p> -->
+</div>
 
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-.topnav a {
-  margin-right: 15%;
-  top: 50px;
-  right: 20px;
-  font-family:"Courier New";
-  color:white;
-  text-align: center;
-  text-decoration: none;
-  font-size: 17px; 
-}
-
-table {
-  margin-top: 20px;
-  width: 120%;
-}
-
-p {
-  color: black;
-  margin-top: 70px;
-  padding-left: 45%;
-  font-family: "Courier New";
-  font-size: 30px;
-
-}
-
-.center1 {
-  margin-left: auto;
-  margin-right: auto;
-  font-family: "Courier New";
-}
-
-.text {
-  text-align: center;
-}
-
-.center2 {
-  margin-left: auto;
-  margin-right: auto;
-  font-family: "Courier New";
-}
-
-.statelink a {
-  color: black;
-  text-align: center;
-  padding: 30px 60px; 
-  border-radius: 5px;
-  border: 5px; 
-  text-decoration: none;
-  font-family:"Courier New";
-  font-size: 20px;
-  float: right;
-  margin-top: 0px;
-}
-
-@media screen and (min-width:761px){
-  body{
-      background-color:white;
-  }
-  h1{
-      color:red;
-  }    
-}
-
-@media screen and (max-width:760px){
-  body{
-      background-color: #333;
-  }
-  h1{
-      color:red;
-  }  
-  p{
-      color: white;
-  }
-}
-
-@media screen and (max-width:480px){
-  body{
-      background-color: #807f83;
-  }
-  h1{
-      color:white;
-  }  
-  p{
-      color: white;
-  }
-}
-
-@media screen and (max-width:360px){
-  body{
-      background-color: #0096d6;
-  }
-  h1{
-      color:white;
-      font-size:25px;
-  }  
-  p{
-      color: white;
-  }
-}
-
-
+</body>
+</html>
