--- a/frontpage.html
+++ b/frontpage.html
@@ -10,7 +10,7 @@
   <a class="active" href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a href="contactUs.html">Contact Us</a>
-  <a href="#Regions">Region<a>
+  <!-- <a href="#Regions">Region<a> -->
 </div>
 
 <div style="padding-left:16px">
