--- a/frontpage.html
+++ b/frontpage.html
@@ -10,6 +10,7 @@
   <a class="active" href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a href="contactUs.html">Contact Us</a>
+  <p>testing</p>
 </div>
 
 <div style="padding-left:16px">
