updated front page

--- a/frontpage.html
+++ b/frontpage.html
@@ -7,14 +7,9 @@
 
 <body>
 <div class="topnav">
-  <a class="active" href="frontpage.html">Home</a>
+  <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a href="contactUs.html">Contact Us</a>
-  <p>testing</p>
-</div>
-
-<div style="padding-left:16px">
-  <h2>Top Navigation with Right Aligned Links</h2>
+  <a class="active" href="contactUs.html">Contact Us</a>
 </div>
 
 <table>
