--- a/frontpage.html
+++ b/frontpage.html
@@ -7,26 +7,17 @@
 
 <body>
 <div class="topnav">
-  <a href="frontpage.html">Home</a>
+  <a class="active" href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
 </div>
 
-<table>
-  <tr class="header">
-    <th>DOSE GIVEN</th>
-    <th>FULLY VACCINATED</th>
-    <th>% POPULATION</th>
-  </tr>
-  <tr class="number">
-    <td>167M</td>
-    <td>62.4M</td>
-    <td>19.0%</td>
-  </tr>
-</table>
+<div style="padding-left:16px">
+  <h2>CALIFORNIA</h2>
+</div>
+
 
 <p>Vaccination By Region</p>
-
 
 <div class="statelink">
 
