--- a/frontpage.html
+++ b/frontpage.html
@@ -16,8 +16,8 @@
   <h2>CALIFORNIA</h2>
 </div>
 
-
-<p>Vaccination By Region</p>
+<!-- 
+<p>Vaccination By Region</p> -->
 
 <div class="statelink">
 
