--- a/frontpage.html
+++ b/frontpage.html
@@ -16,12 +16,40 @@
   <h2>CALIFORNIA</h2>
 </div>
 
+<table>
+  <tr class="header">
+    <th>DOSE GIVEN</th>
+    <th>FULLY VACCINATED</th>
+    <th>% POPULATION</th>
+  </tr>
+  <tr class="number">
+    <td>167M</td>
+    <td>62.4M</td>
+    <td>19.0%</td>
+  </tr>
+</table>
 <!-- 
 <p>Vaccination By Region</p> -->
 
-<div class="statelink">
+{% comment %} < class="statelink">
 
-  <a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a>
+<table>
+  <tbody>
+    <tr>
+      <td><a href="az.html"><strong><u>ARIZONA</u></strong></a></td>
+      <td><a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a></td>
+    </tr>
+
+  </tbody>
+
+</table> {% endcomment %}
+
+
+
+<a href="co.html"><strong><u>COLORADO</u></strong></a>
+<a href="ct.html"><strong><u>CONNECTICUT</u></strong></a>
+
+
   <a href="wa.html"><strong><u>WASHINGTON</u></strong></a>
   <a href="fl.html"><strong><u>FLORIDA</u></strong></a>
   <a href="tx.html"><strong><u>TEXAS</u></strong></a>
@@ -31,14 +59,12 @@
   <a href="nj.html"><strong><u>NEW JERSEY</u></strong></a>
   <a href="ny.html"><strong><u>GEORGIA</u></strong></a>
   <a href="ma.html"><strong><u>MASSACHUSETTS</u></strong></a>
-  <a href="az.html"><strong><u>ARIZONA</u></strong></a>
   <a href="wi.html"><strong><u>WISCONSIN</u></strong></a>
   <a href="ml.html"><strong><u>MARYLAND</u></strong></a>
-  <a href="co.html"><strong><u>COLORADO</u></strong></a>
   <a href="ne.html"><strong><u>NEVADA</u></strong></a>
   <a href="ha.html"><strong><u>HAWAII</u></strong></a>
   <a href="ke.html"><strong><u>KENTUCKY</u></strong></a>
-  <a href="ct.html"><strong><u>CONNECTICUT</u></strong></a>
+
   
 </div>
 
