--- a/fl.html
+++ b/fl.html
@@ -20,3 +20,18 @@
 
 </body>
 </html>
+
+
+<!-- 
+<table>
+    <tr class="header">
+      <th>DOSE GIVEN</th>
+      <th>FULLY VACCINATED</th>
+      <th>% POPULATION</th>
+    </tr>
+    <tr class="number">
+      <td>167M</td>
+      <td>62.4M</td>
+      <td>19.0%</td>
+    </tr>
+  </table> -->
