--- a/frontpage.html
+++ b/frontpage.html
@@ -13,60 +13,49 @@
 </div>
 
 <div style="padding-left:16px">
-  <h2>CALIFORNIA</h2>
+  <h2>Covid-19 Vaccine Tracker in the US</h2>
 </div>
 
-<table>
-  <tr class="header">
-    <th>DOSE GIVEN</th>
-    <th>FULLY VACCINATED</th>
-    <th>% POPULATION</th>
-  </tr>
-  <tr class="number">
-    <td>167M</td>
-    <td>62.4M</td>
-    <td>19.0%</td>
-  </tr>
-</table>
 <!-- 
 <p>Vaccination By Region</p> -->
 
-{% comment %} < class="statelink">
 
-<table>
-  <tbody>
-    <tr>
-      <td><a href="az.html"><strong><u>ARIZONA</u></strong></a></td>
-      <td><a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a></td>
-    </tr>
-
-  </tbody>
-
-</table> {% endcomment %}
-
-
-
-<a href="co.html"><strong><u>COLORADO</u></strong></a>
-<a href="ct.html"><strong><u>CONNECTICUT</u></strong></a>
-
-
-  <a href="wa.html"><strong><u>WASHINGTON</u></strong></a>
-  <a href="fl.html"><strong><u>FLORIDA</u></strong></a>
-  <a href="tx.html"><strong><u>TEXAS</u></strong></a>
-  <a href="pa.html"><strong><u>PENNSYLVANIA</u></strong></a>
-  <a href="il.html"><strong><u>ILLINOIS</u></strong></a>
-  <a href="nc.html"><strong><u>NORTH CAROLINA</u></strong></a>
-  <a href="nj.html"><strong><u>NEW JERSEY</u></strong></a>
-  <a href="ny.html"><strong><u>GEORGIA</u></strong></a>
-  <a href="ma.html"><strong><u>MASSACHUSETTS</u></strong></a>
-  <a href="wi.html"><strong><u>WISCONSIN</u></strong></a>
-  <a href="ml.html"><strong><u>MARYLAND</u></strong></a>
-  <a href="ne.html"><strong><u>NEVADA</u></strong></a>
-  <a href="ha.html"><strong><u>HAWAII</u></strong></a>
-  <a href="ke.html"><strong><u>KENTUCKY</u></strong></a>
-
-  
-</div>
+  <table>
+    <tbody>
+      <tr>
+        <td><a href="az.html"><strong><u>ARIZONA</u></strong></a></td>
+        <td><a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a></td>
+       </tr>
+      <tr>
+        <td><a href="co.html"><strong><u>COLORADO</u></strong></a></td>
+        <td><a href="ct.html"><strong>CONNECTICUT</u></strong></a></td>
+      </tr>
+      <tr>
+        <td><a href="fl.html"><strong><u>FLORIDA</u></strong></a></td>
+        <td><a href="ny.html"><strong><u>GEORGIA</u></strong></a></td>
+      </tr>
+      <tr>
+        <td><a href="ha.html"><strong></strong><u>HAWAII</u></strong></a></td>
+        <td><a href="il.html"><strong><u>ILLINOIS</u></strong></a></td>
+      </tr>
+      <tr>
+        <td><a href="ml.html"><strong><u>MARYLAND</u></strong></a></td>
+        <td><a href="ma.html"><strong><u>MASSACHUSETTS</u></strong></a></td>
+      </tr>
+      <tr>
+        <td><a href="ne.html"><strong><u>NEVADA</u></strong></a></td>
+        <td><a href="nj.html"><strong><u>NEW JERSEY</u></strong></a></td>
+      </tr>
+      <tr>
+        <td><a href="nc.html"><strong><u>NORTH CAROLINA</u></strong></a></td>
+        <td><a href="pa.html"><strong><u>PENNSYLVANIA</u></strong></a></td>
+      </tr>
+      <tr>
+        <td><a href="wi.html"><strong><u>WISCONSIN</u></strong></a></td>
+        <td><a href="wa.html"><strong><u>WASHINGTON</u></strong></a></td>
+      </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
