--- a/contactUs.html
+++ b/contactUs.html
@@ -12,9 +12,11 @@
   <a class="active" href="contactUs.html">Contact Us</a>
 </div>
 
-<div style="padding-left:16px">
-  <h2>Top Navigation with Right Aligned Links</h2>
-  <p>Some content..</p>
+<br style="padding-left:16px">
+  <h1>Contact</h1>
+  <br>For general inquires or business opportunities, email<br>
+  <u>effythe.b@gmail.com</u></br>
+  <br><u>s.v.rattana90@gmail.com</u></br></p>
 </div>
 
 </body>
