--- a/frontpage.html
+++ b/frontpage.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="frontpage.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- CSS -->
+    <link rel="stylesheet" href="frontpage.css">
+  <!-- Bootstrap -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+    </script>
 </head>
 
 <body>
@@ -19,43 +29,44 @@
 <!-- 
 <p>Vaccination By Region</p> -->
 
-
-  <table>
-    <tbody>
-      <tr>
-        <td><a href="az.html"><strong><u>ARIZONA</u></strong></a></td>
-        <td><a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a></td>
-       </tr>
-      <tr>
-        <td><a href="co.html"><strong><u>COLORADO</u></strong></a></td>
-        <td><a href="ct.html"><strong>CONNECTICUT</u></strong></a></td>
-      </tr>
-      <tr>
-        <td><a href="fl.html"><strong><u>FLORIDA</u></strong></a></td>
-        <td><a href="ny.html"><strong><u>GEORGIA</u></strong></a></td>
-      </tr>
-      <tr>
-        <td><a href="ha.html"><strong></strong><u>HAWAII</u></strong></a></td>
-        <td><a href="il.html"><strong><u>ILLINOIS</u></strong></a></td>
-      </tr>
-      <tr>
-        <td><a href="ml.html"><strong><u>MARYLAND</u></strong></a></td>
-        <td><a href="ma.html"><strong><u>MASSACHUSETTS</u></strong></a></td>
-      </tr>
-      <tr>
-        <td><a href="ne.html"><strong><u>NEVADA</u></strong></a></td>
-        <td><a href="nj.html"><strong><u>NEW JERSEY</u></strong></a></td>
-      </tr>
-      <tr>
-        <td><a href="nc.html"><strong><u>NORTH CAROLINA</u></strong></a></td>
-        <td><a href="pa.html"><strong><u>PENNSYLVANIA</u></strong></a></td>
-      </tr>
-      <tr>
-        <td><a href="wi.html"><strong><u>WISCONSIN</u></strong></a></td>
-        <td><a href="wa.html"><strong><u>WASHINGTON</u></strong></a></td>
-      </tr>
-    </tbody>
-</table>
+<div class="table-responsive">
+    <table class="table table-borderless">
+      <tbody>
+        <tr>
+          <td><a href="az.html"><strong><u>ARIZONA</u></strong></a></td>
+          <td><a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a></td>
+        </tr>
+        <tr>
+          <td><a href="co.html"><strong><u>COLORADO</u></strong></a></td>
+          <td><a href="ct.html"><strong>CONNECTICUT</u></strong></a></td>
+        </tr>
+        <tr>
+          <td><a href="fl.html"><strong><u>FLORIDA</u></strong></a></td>
+          <td><a href="ny.html"><strong><u>GEORGIA</u></strong></a></td>
+        </tr>
+        <tr>
+          <td><a href="ha.html"><strong></strong><u>HAWAII</u></strong></a></td>
+          <td><a href="il.html"><strong><u>ILLINOIS</u></strong></a></td>
+        </tr>
+        <tr>
+          <td><a href="ml.html"><strong><u>MARYLAND</u></strong></a></td>
+          <td><a href="ma.html"><strong><u>MASSACHUSETTS</u></strong></a></td>
+        </tr>
+        <tr>
+          <td><a href="ne.html"><strong><u>NEVADA</u></strong></a></td>
+          <td><a href="nj.html"><strong><u>NEW JERSEY</u></strong></a></td>
+        </tr>
+        <tr>
+          <td><a href="nc.html"><strong><u>NORTH CAROLINA</u></strong></a></td>
+          <td><a href="pa.html"><strong><u>PENNSYLVANIA</u></strong></a></td>
+        </tr>
+        <tr>
+          <td><a href="wi.html"><strong><u>WISCONSIN</u></strong></a></td>
+          <td><a href="wa.html"><strong><u>WASHINGTON</u></strong></a></td>
+        </tr>
+      </tbody>
+  </table>
+</div>
 
 </body>
 </html>
