--- a/contactUs.html
+++ b/contactUs.html
@@ -12,7 +12,7 @@
   <a class="active" href="contactUs.html">Contact Us</a>
 </div>
 
-<br style="padding-left:16px">
+<div class="contact-heading">
   <h1>Contact</h1>
   <br>For general inquires or business opportunities, email<br>
   <u>effythe.b@gmail.com</u></br>
