--- a/frontpage.html
+++ b/frontpage.html
@@ -45,7 +45,7 @@
           <td><a href="ny.html"><strong><u>GEORGIA</u></strong></a></td>
         </tr>
         <tr>
-          <td><a href="ha.html"><strong></strong><u>HAWAII</u></strong></a></td>
+          <td><a href="ha.html"><strong><u>HAWAII</u></strong></a></td>
           <td><a href="il.html"><strong><u>ILLINOIS</u></strong></a></td>
         </tr>
         <tr>
