--- a/contactUs.html
+++ b/contactUs.html
@@ -14,8 +14,8 @@
 
 <div class="contact-heading">
   <h1>Contact</h1>
-  <br>For general inquires or business opportunities, email<br>
-  <u>effythe.b@gmail.com</u></br>
+  <br>For general inquires or business opportunities, email</br>
+  <br><u>effythe.b@gmail.com</u></br>
   <br><u>s.v.rattana90@gmail.com</u></br></p>
 </div>
 
