--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,10 +12,10 @@
   <a href="contactUs.html">Contact Us</a>
 </div>
 
-<div style="padding-left:16px">
+<!-- <div style="padding-left:16px">
   <h2>Top Navigation with Right Aligned Links</h2>
   <p>Some content..</p>
-</div>
+</div> -->
 
 </body>
 </html>
