--- a/frontpage.html
+++ b/frontpage.html
@@ -29,8 +29,8 @@
 <!-- 
 <p>Vaccination By Region</p> -->
 
-<div class="table-responsive">
-    <table class="table table-borderless">
+
+    <table clas="state">
       <tbody>
         <tr>
           <td><a href="az.html"><strong><u>ARIZONA</u></strong></a></td>
@@ -66,7 +66,7 @@
         </tr>
       </tbody>
   </table>
-</div>
+
 
 </body>
 </html>
