--- a/frontpage.html
+++ b/frontpage.html
@@ -26,11 +26,23 @@
   <h2>Covid-19 Vaccine Tracker in the US</h2>
 </div>
 
-<!-- 
-<p>Vaccination By Region</p> -->
+<table>
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>167M</td>
+    <td>62.4M</td>
+    <td>19.0%</td>
+  </tr>
+</table>
 
+<p>Vaccination By Region</p> 
 
-    <table clas="state">
+<div class="table-responsive">
+    <table class="table table-borderless">
       <tbody>
         <tr>
           <td><a href="az.html"><strong><u>ARIZONA</u></strong></a></td>
@@ -66,7 +78,7 @@
         </tr>
       </tbody>
   </table>
-
+</div>
 
 </body>
 </html>
