--- a/frontpage.html
+++ b/frontpage.html
@@ -26,7 +26,7 @@
   <h2>Covid-19 Vaccine Tracker in the US</h2>
 </div>
 
-<table>
+<table class="state">
   <tr class="header">
     <th>Dose Given</th>
     <th>Fully Vaccinated</th>
@@ -43,6 +43,7 @@
 
 <div class="table-responsive">
     <table class="table table-borderless">
+      
       <tbody>
         <tr>
           <td><a href="az.html"><strong><u>ARIZONA</u></strong></a></td>
