--- a/az.html
+++ b/az.html
@@ -14,8 +14,20 @@
 
 <div style="padding-left:16px">
   <h2>ARIZONA</h2>
-  <!-- <p>Some content..</p> -->
 </div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>3.9M</td>
+    <td>1.45M</td>
+    <td>20.0%</td>
+  </tr>
+</table>
 
 </body>
 </html>
