semi-final changes

--- a/contactUs.html
+++ b/contactUs.html
@@ -3,15 +3,6 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="frontpage.css">
-<!-- Bootstrap -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
-  </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
-  </script>
 </head>
 
 <body>
@@ -19,13 +10,14 @@
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="#region">Region</a>
 </div>
 
 <div class="contact-heading">
   <h1>Contact</h1>
   <br>For general inquires or business opportunities, email</br>
   <br><u>effythe.b@gmail.com</u></br>
-  <br><u>s.v.rattana90@gmail.com</u></br></p>
+  <br><u>s.v.rattana90@gmail.com</u></br>
 </div>
 
 </body>
