--- a/tx.html
+++ b/tx.html
@@ -10,11 +10,26 @@
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a class="active" href="contactUs.html">Contact Us</a>
+  <a class="Region" href="Region.html">Region</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:45%">
   <h2>TEXAS</h2>
-  <!-- <p>Some content..</p> -->
+</div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>13.8M</td>
+    <td>5.07M</td>
+    <td>17.5%</td>
+  </tr>
+</table>
+  
 </div>
 
 </body>
