--- a/az.html
+++ b/az.html
@@ -9,10 +9,11 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="Region">Region</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:45%">
   <h2>ARIZONA</h2>
 </div>
 
