--- a/cal.html
+++ b/cal.html
@@ -3,20 +3,34 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="frontpage.css">
-
 </head>
 
 <body>
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="Region.html">Region</a> 
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:45%">
   <h2>CALIFORNIA</h2>
-  <!-- <p>Some content..</p> -->
 </div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>21.2M</td>
+    <td>7.6M</td>
+    <td>19.2%</td>
+  </tr>
+</table>
+
+
 
 </body>
 </html>
