--- a/ny.html
+++ b/ny.html
@@ -9,13 +9,26 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="Region.html">Region</a>
 </div>
 
-<div style="padding-left:16px">
-  <h2>NEW YORK</h2>
-  <!-- <p>Some content..</p> -->
+<div style="padding-left:45%">
+  <h2>TEXAS</h2>
 </div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>11.2M</td>
+    <td>4.4M</td>
+    <td>22.6%</td>
+  </tr>
+</table>
 
 </body>
 </html>
