--- a/pa.html
+++ b/pa.html
@@ -9,13 +9,26 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="#region">Region</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:45%">
   <h2>PENNSYLVANIA</h2>
-  <!-- <p>Some content..</p> -->
 </div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>6.84M</td>
+    <td>2.48M</td>
+    <td>19.4%</td>
+  </tr>
+</table>
 
 </body>
 </html>
