--- a/wa.html
+++ b/wa.html
@@ -9,12 +9,33 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="#region">Region</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:45%">
   <h2>WASHINGTON</h2>
-  <!-- <p>Some content..</p> -->
+</div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>4.17M</td>
+    <td>1.65M</td>
+    <td>21.7%</td>
+  </tr>
+</table>
+
+<div class="contact-heading">
+  <h1>Washington Population 2021</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>7,656,200</h4>
 </div>
 
 </body>
