--- a/fl.html
+++ b/fl.html
@@ -10,7 +10,7 @@
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a href="contactUs.html">Contact Us</a>
-  <a class="active" href="Region.html">Region</a>
+  <a class="active" href="#Region">Region</a>
 </div>
 
 <div style="padding-left:45%">
@@ -24,9 +24,9 @@
     <th>% Population</th>
   </tr>
   <tr class="number">
-    <td>13.8M</td>
-    <td>5.07M</td>
-    <td>17.5%</td>
+    <td>11.4M</td>
+    <td>4.25M</td>
+    <td>19.8%</td>
   </tr>
 </table>
 
