--- a/frontpage.html
+++ b/frontpage.html
@@ -43,31 +43,32 @@
         </tr>
         <tr>
           <td><a href="co.html"><strong><u>COLORADO</u></strong></a></td>
-          <td><a href="ct.html"><strong>CONNECTICUT</u></strong></a></td>
+          <td><a href="ct.html"><strong><u>CONNECTICUT</u></strong></a></td>
         </tr>
         <tr>
           <td><a href="fl.html"><strong><u>FLORIDA</u></strong></a></td>
-          <td><a href="ny.html"><strong><u>GEORGIA</u></strong></a></td>
-        </tr>
-        <tr>
           <td><a href="ha.html"><strong><u>HAWAII</u></strong></a></td>
+        </tr>
+        <tr>
           <td><a href="il.html"><strong><u>ILLINOIS</u></strong></a></td>
-        </tr>
-        <tr>
           <td><a href="ml.html"><strong><u>MARYLAND</u></strong></a></td>
-          <td><a href="ma.html"><strong><u>MASSACHUSETTS</u></strong></a></td>
+
         </tr>
         <tr>
+          <td><a href="ma.html"><strong><u>MASSACHUSETTS</u></strong></a></td>
           <td><a href="ne.html"><strong><u>NEVADA</u></strong></a></td>
+        </tr>
+        <tr>
           <td><a href="nj.html"><strong><u>NEW JERSEY</u></strong></a></td>
+          <td><a href="ny.html"><strong><u>NEW YORK</u></strong></a></td>
         </tr>
         <tr>
           <td><a href="nc.html"><strong><u>NORTH CAROLINA</u></strong></a></td>
           <td><a href="pa.html"><strong><u>PENNSYLVANIA</u></strong></a></td>
         </tr>
         <tr>
-          <td><a href="wi.html"><strong><u>WISCONSIN</u></strong></a></td>
           <td><a href="wa.html"><strong><u>WASHINGTON</u></strong></a></td>
+          <td><a href="wi.html"><strong><u>WISCONSIN</u></strong></a></td>
         </tr>
       </tbody>
   </table>
