--- a/ma.html
+++ b/ma.html
@@ -9,13 +9,29 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="#region">Region</a>
 </div>
 
 <div style="padding-left:16px">
   <h2>MASSACHUSETTS</h2>
   <!-- <p>Some content..</p> -->
 </div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>4.35M</td>
+    <td>1.63M</td>
+    <td>23.6%</td>
+  </tr>
+</table>
+
+
 
 </body>
 </html>
