--- a/cal.html
+++ b/cal.html
@@ -10,7 +10,7 @@
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a href="contactUs.html">Contact Us</a>
-  <a class="active" href="Region.html">Region</a> 
+  <a class="active" href="#region">Region</a> 
 </div>
 
 <div style="padding-left:45%">
