--- a/ct.html
+++ b/ct.html
@@ -9,12 +9,12 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="#region">Region</a>
 </div>
 
 <div style="padding-left:16px">
   <h2>CONNECTICUT</h2>
-  <!-- <p>Some content..</p> -->
 </div>
 
 </body>
