--- a/ha.html
+++ b/ha.html
@@ -12,10 +12,29 @@
   <a class="active" href="contactUs.html">Contact Us</a>
 </div>
 
-<div style="padding-left:16px">
-  <h2>HAWAII</h2>
-  <!-- <p>Some content..</p> -->
+<div class="topnav">
+  <a href="frontpage.html">Home</a>
+  <a href="aboutUs.html">About Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="Region">Region</a>
 </div>
+
+<div style="padding-left:45%">
+  <h2>HAWAII</h2>
+</div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>816K</td>
+    <td>334K</td>
+    <td>23.6%</td>
+  </tr>
+</table>
 
 </body>
 </html>
