--- a/il.html
+++ b/il.html
@@ -9,13 +9,26 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="#region">Region</a>
 </div>
 
 <div style="padding-left:16px">
   <h2>ILLINOIS</h2>
-  <!-- <p>Some content..</p> -->
 </div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>7.02M</td>
+    <td>2.54M</td>
+    <td>20.1%</td>
+  </tr>
+</table>
 
 </body>
 </html>
