--- a/ml.html
+++ b/ml.html
@@ -10,12 +10,25 @@
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="#region">Region</a>
 </div>
 
 <div style="padding-left:16px">
   <h2>MARYLAND</h2>
-  <!-- <p>Some content..</p> -->
 </div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>3.41M</td>
+    <td>1.34M</td>
+    <td>22.2%</td>
+  </tr>
+</table>
 
 </body>
 </html>
