--- a/nj.html
+++ b/nj.html
@@ -10,11 +10,11 @@
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a class="active" href="contactUs.html">Contact Us</a>
+  <a class="active" href="#region">Region</a>
 </div>
 
 <div style="padding-left:16px">
   <h2>NEW JERSEY</h2>
-  <!-- <p>Some content..</p> -->
 </div>
 
 </body>
