--- a/tx.html
+++ b/tx.html
@@ -10,7 +10,7 @@
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a class="active" href="contactUs.html">Contact Us</a>
-  <a class="Region" href="Region.html">Region</a>
+  <a class="Region" href="#region">Region</a>
 </div>
 
 <div style="padding-left:45%">
