--- a/wi.html
+++ b/wi.html
@@ -9,13 +9,26 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="#Region">Region</a>
 </div>
 
 <div style="padding-left:16px">
   <h2>WISCONSIN</h2>
-  <!-- <p>Some content..</p> -->
 </div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>3.46M</td>
+    <td>1.35M</td>
+    <td>23.3%</td>
+  </tr>
+</table>
 
 </body>
 </html>
