--- a/ct.html
+++ b/ct.html
@@ -13,8 +13,24 @@
   <a class="active" href="#region">Region</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:45%">
   <h2>CONNECTICUT</h2>
+</div>
+
+<div class="contact-heading">
+  <h1>Washington Population 2021</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>7,656,200</h4>
+</div>
+
+<div class="contact-heading">
+  <h1>Washington Total Area</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>71,362 sq mi (184,827 km2)</h4>
 </div>
 
 </body>
