--- a/ha.html
+++ b/ha.html
@@ -5,18 +5,11 @@
 <link rel="stylesheet" href="frontpage.css">
 </head>
 
-<body>
-<div class="topnav">
-  <a href="frontpage.html">Home</a>
-  <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
-</div>
-
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a href="contactUs.html">Contact Us</a>
-  <a class="active" href="Region">Region</a>
+  <a class="active" href="#region">Region</a>
 </div>
 
 <div style="padding-left:45%">
@@ -35,6 +28,22 @@
     <td>23.6%</td>
   </tr>
 </table>
+
+<div class="contact-heading">
+  <h1>Washington Population 2021</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>7,656,200</h4>
+</div>
+
+<div class="contact-heading">
+  <h1>Washington Total Area</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>71,362 sq mi (184,827 km2)</h4>
+</div>
 
 </body>
 </html>
