--- a/il.html
+++ b/il.html
@@ -13,7 +13,7 @@
   <a class="active" href="#region">Region</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:45%">
   <h2>ILLINOIS</h2>
 </div>
 
@@ -29,6 +29,22 @@
     <td>20.1%</td>
   </tr>
 </table>
+
+<div class="contact-heading">
+  <h1>Washington Population 2021</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>7,656,200</h4>
+</div>
+
+<div class="contact-heading">
+  <h1>Washington Total Area</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>71,362 sq mi (184,827 km2)</h4>
+</div>
 
 </body>
 </html>
