--- a/ny.html
+++ b/ny.html
@@ -14,7 +14,7 @@
 </div>
 
 <div style="padding-left:45%">
-  <h2>TEXAS</h2>
+  <h2>NEW YORK</h2>
 </div>
 
 <table class="state">
@@ -24,11 +24,27 @@
     <th>% Population</th>
   </tr>
   <tr class="number">
-    <td>11.2M</td>
-    <td>4.4M</td>
-    <td>22.6%</td>
+    <td>11.5M</td>
+    <td>4.54M</td>
+    <td>23.3%</td>
   </tr>
 </table>
+
+<div class="contact-heading">
+  <h1>Washington Population 2021</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>7,656,200</h4>
+</div>
+
+<div class="contact-heading">
+  <h1>Washington Total Area</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>71,362 sq mi (184,827 km2)</h4>
+</div>
 
 </body>
 </html>
