--- a/tx.html
+++ b/tx.html
@@ -9,8 +9,8 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
-  <a class="Region" href="#region">Region</a>
+  <a href="contactUs.html">Contact Us</a>
+  <a class="active" href="#region">Region</a>
 </div>
 
 <div style="padding-left:45%">
@@ -29,7 +29,21 @@
     <td>17.5%</td>
   </tr>
 </table>
-  
+
+<div class="contact-heading">
+  <h1>Washington Population 2021</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>7,656,200</h4>
+</div>
+
+<div class="contact-heading">
+  <h1>Washington Total Area</h1>
+</div>
+
+<div style="color:rgb(80, 153, 183)">
+  <h4>71,362 sq mi (184,827 km2)</h4>
 </div>
 
 </body>
