--- a/tx.html
+++ b/tx.html
@@ -24,26 +24,26 @@
     <th>% Population</th>
   </tr>
   <tr class="number">
-    <td>13.8M</td>
-    <td>5.07M</td>
-    <td>17.5%</td>
+    <td>14.2</td>
+    <td>5.26M</td>
+    <td>18.2%</td>
   </tr>
 </table>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
+  <h1>Texas Population 2021</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
-  <h4>7,656,200</h4>
+  <h4>29,730,300</h4>
 </div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
+  <h1>Texas Total Area</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
+  <h4>268,596.46 sq mi (695,662	km2)</h4>
 </div>
 
 </body>
