--- a/az.html
+++ b/az.html
@@ -31,20 +31,19 @@
 </table>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
+  <h1>Arizona Population 2021</h1>
+  <h3>7,520,100</h3>
 </div>
 
-<div style="color:rgb(80, 153, 183)">
-  <h4>7,656,200</h4>
-</div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
+  <h1>Arizona Total Area</h1>
+  <h3>113,990 sq mi (295,254 km2)</h3>
 </div>
 
-<div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
-</div>
+
+  
+
 
 </body>
 </html>
