--- a/ct.html
+++ b/ct.html
@@ -18,19 +18,14 @@
 </div>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
+  <h1>Conecticut Population 2021</h1>
+  <h3>3,552,820</h3>
 </div>
 
-<div style="color:rgb(80, 153, 183)">
-  <h4>7,656,200</h4>
-</div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
-</div>
-
-<div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
+  <h1>Conecticut Total Area</h1>
+  <h3>4,849 sq mi (12,559 km2)</h3>
 </div>
 
 </body>
