--- a/ha.html
+++ b/ha.html
@@ -30,20 +30,17 @@
 </table>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
+  <h1>Hawaii Population 2021</h1>
+  <h3>1,406,430</h3>
 </div>
 
-<div style="color:rgb(80, 153, 183)">
-  <h4>7,656,200</h4>
-</div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
+  <h1>Hawaii Total Area</h1>
+  <h3> 6,423 sq mi 28,311(Km2)</h3>
 </div>
 
-<div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
-</div>
+
 
 </body>
 </html>
