--- a/nc.html
+++ b/nc.html
@@ -31,19 +31,19 @@
 </table>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
+  <h1>North Carolina Population 2021</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
-  <h4>7,656,200</h4>
+  <h4>10,497,741</h4>
 </div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
+  <h1>North Carolina Total Area</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
+  <h4>53,819.16 sq mi (139,391 km2)</h4>
 </div>
 
 </body>
