--- a/ny.html
+++ b/ny.html
@@ -31,7 +31,7 @@
 </table>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
+  <h1>New York Population 2021</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
@@ -39,11 +39,11 @@
 </div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
+  <h1>New York Total Area</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
+  <h4>54,554.98 sq mi (141,297 km2)</h4>
 </div>
 
 </body>
