--- a/pa.html
+++ b/pa.html
@@ -31,19 +31,19 @@
 </table>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
+  <h1>Pennsylvania Population 2021</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
-  <h4>7,656,200</h4>
+  <h4>12,813,969</h4>
 </div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
+  <h1>Pennsylvania Total Area</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
+  <h4>46,054.34 sq mi (119,280 km2)</h4>
 </div>
 
 </body>
