--- a/wi.html
+++ b/wi.html
@@ -10,10 +10,10 @@
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
   <a href="contactUs.html">Contact Us</a>
-  <a class="active" href="#Region">Region</a>
+  <a class="active" href="#region">Region</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:40%">
   <h2>WISCONSIN</h2>
 </div>
 
@@ -31,19 +31,19 @@
 </table>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
+  <h1>Wisconsin Population 2021</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
-  <h4>7,656,200</h4>
+  <h4>5,852,490</h4>
 </div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
+  <h1>Wisconsin Total Area</h1>
 </div>
 
 <div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
+  <h4>65,496.38 sq mi (169,635 km2)</h4>
 </div>
 
 </body>
