--- a/ct.html
+++ b/ct.html
@@ -4,8 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="frontpage.css">
 </head>
-
 <body>
+
+
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
@@ -16,6 +17,21 @@
 <div style="padding-left:45%">
   <h2>CONNECTICUT</h2>
 </div>
+
+<table class="state">
+  <tr class="header">
+    <th>Dose Given</th>
+    <th>Fully Vaccinated</th>
+    <th>% Population</th>
+  </tr>
+  <tr class="number">
+    <td>2.39M</td>
+    <td>944K</td>
+    <td>26.5%</td>
+  </tr>
+</table>
+
+
 
 <div class="contact-heading">
   <h1>Conecticut Population 2021</h1>
