--- a/frontpage.html
+++ b/frontpage.html
@@ -66,8 +66,8 @@
           <td><a href="pa.html"><strong><u>PENNSYLVANIA</u></strong></a></td>
         </tr>
         <tr>
+          <td><a href="tx.html"><strong><u>TEXAS</u></strong></a></td>
           <td><a href="wa.html"><strong><u>WASHINGTON</u></strong></a></td>
-          <td><a href="wi.html"><strong><u>WISCONSIN</u></strong></a></td>
         </tr>
       </tbody>
   </table>
