--- a/il.html
+++ b/il.html
@@ -31,19 +31,13 @@
 </table>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
-</div>
-
-<div style="color:rgb(80, 153, 183)">
-  <h4>7,656,200</h4>
+  <h1>Illinois Population 2021</h1>
+  <h3>12,700,381</h3>
 </div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
-</div>
-
-<div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
+  <h1>Illinois Total Area</h1>
+  <h3>57,913.55 sq mi 149,995(Km2)</h3>
 </div>
 
 </body>
