--- a/nc.html
+++ b/nc.html
@@ -13,7 +13,7 @@
   <a class="active" href="#region">Region</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:45%">
   <h2>NORTH CAROLINA</h2>
 </div>
 
