--- a/fl.html
+++ b/fl.html
@@ -13,7 +13,7 @@
   <a class="active" href="#Region">Region</a>
 </div>
 
-<div style="padding-left:45%">
+<div style="padding-left:35%">
   <h2>FLORIDA</h2>
 </div>
 
@@ -31,19 +31,13 @@
 </table>
 
 <div class="contact-heading">
-  <h1>Washington Population 2021</h1>
-</div>
-
-<div style="color:rgb(80, 153, 183)">
-  <h4>7,656,200</h4>
+  <h1>Florida Population 2021</h1>
+  <h3>21,646,155</h3>
 </div>
 
 <div class="contact-heading">
-  <h1>Washington Total Area</h1>
-</div>
-
-<div style="color:rgb(80, 153, 183)">
-  <h4>71,362 sq mi (184,827 km2)</h4>
+  <h1>Florida Total Area</h1>
+  <h3>65,757.70 sq mi (170,312 km2)</h3>
 </div>
 
 </body>
