--- a/frontpage.html
+++ b/frontpage.html
@@ -42,7 +42,7 @@
           <td><a href="cal.html"><strong><u>CALIFORNIA</u></strong></u></a></td>
         </tr>
         <tr>
-          <td><a href="co.html"><strong><u>COLORADO</u></strong></a></td>
+          <td><a href="cl.html"><strong><u>COLORADO</u></strong></a></td>
           <td><a href="ct.html"><strong><u>CONNECTICUT</u></strong></a></td>
         </tr>
         <tr>
