--- a/ml.html
+++ b/ml.html
@@ -9,11 +9,11 @@
 <div class="topnav">
   <a href="frontpage.html">Home</a>
   <a href="aboutUs.html">About Us</a>
-  <a class="active" href="contactUs.html">Contact Us</a>
+  <a href="contactUs.html">Contact Us</a>
   <a class="active" href="region">Region</a>
 </div>
 
-<div style="padding-left:40%">
+<div style="padding-left:35%">
   <h2>MARYLAND</h2>
 </div>
 
