--- a/aboutUs.html
+++ b/aboutUs.html
@@ -8,19 +8,18 @@
 <body>
 <div class="topnav">
   <a href="frontpage.html">Home</a>
-  <a class="active" href="aboutUs.html">About Us</a>
+  <a class="active" href="aboutUs.html">About</a>
   <a href="contactUs.html">Contact Us</a>
   <a href="#region">Region</a>
 </div>
 
 <div class="contact-heading">
-  <h1>Contact</h1>
-  <br>For general inquires or business opportunities, email</br>
-  <br><u>effythe.b@gmail.com</u></br>
-  <br><u>s.v.rattana90@gmail.com</u></br>
+  <h1>Welcome</h1>
+  <br>The website shows the number of people who have gotten </br>
+  <br>vaccinated in 16 selected states.</br>
+  <br>We have also included the statistics of the current population</br>
+  <br>and the total area for each state.</br>
 </div>
-
-
 
 </body>
 </html>
