--- a/cl.html
+++ b/cl.html
@@ -1,6 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="frontpage.css">
+</head>
+
+<body>
 <div class="topnav">
     <a href="frontpage.html">Home</a>
-    <a href="aboutUs.html">About Us</a>
+    <a href="aboutUs.html">About</a>
     <a href="contactUs.html">Contact Us</a>
     <a class="active" href="#region">Region</a>
 </div>
@@ -31,4 +39,7 @@
     <h1>Colorado Total Area</h1>
     <h3>103,718 sq sq mi (269,601 km2)</h3>
 </div>
+
+</body>
+</html>
 
