--- a/ct.html
+++ b/ct.html
@@ -9,7 +9,7 @@
 
 <div class="topnav">
   <a href="frontpage.html">Home</a>
-  <a href="aboutUs.html">About Us</a>
+  <a href="aboutUs.html">About</a>
   <a href="contactUs.html">Contact Us</a>
   <a class="active" href="#region">Region</a>
 </div>
