--- a/frontpage.html
+++ b/frontpage.html
@@ -9,7 +9,7 @@
 <body>
 <div class="topnav">
   <a class="active" href="frontpage.html">Home</a>
-  <a href="aboutUs.html">About Us</a>
+  <a href="aboutUs.html">About</a>
   <a href="contactUs.html">Contact Us</a>
   <a href="#region">Region</a>
 </div>
