--- a/pa.html
+++ b/pa.html
@@ -8,7 +8,7 @@
 <body>
 <div class="topnav">
   <a href="frontpage.html">Home</a>
-  <a href="aboutUs.html">About Us</a>
+  <a href="aboutUs.html">About</a>
   <a href="contactUs.html">Contact Us</a>
   <a class="active" href="#region">Region</a>
 </div>
