--- a/aboutUs.html
+++ b/aboutUs.html
@@ -15,8 +15,7 @@
 
 <div class="contact-heading">
   <h1>Welcome</h1>
-  <br>The website shows the number of people who have gotten </br>
-  <br>vaccinated in 16 selected states.</br>
+  <br>The website shows the number of people who have gotten vaccinated in 16 selected states.</br>
   <br>We have also included the statistics of the current population</br>
   <br>and the total area for each state.</br>
 </div>
