--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,8 +16,7 @@
 <div class="contact-heading">
   <h1>Welcome</h1>
   <br>The website shows the number of people who have gotten vaccinated in 16 selected states.</br>
-  <br>We have also included the statistics of the current population</br>
-  <br>and the total area for each state.</br>
+  <br>We have also included the statistics of the current population and the total area for each state.</br>
 </div>
 
 </body>
