--- a/cal.html
+++ b/cal.html
@@ -37,7 +37,7 @@
 
 
 <div class="contact-heading">
-  <h1>Arizona Total Area</h1>
+  <h1>California Total Area</h1>
   <h3>163,696 sq mi (295,254 km2)</h3>
 </div>
 
