--- a/ct.html
+++ b/ct.html
@@ -15,19 +15,17 @@
 </div>
 
 <div style="padding-left:30%">
-  <h2>CONNECTICUT</h2>
+  <h2>SPECIAL BUNNY BOARDING</h2>
 </div>
 
 <table class="state">
   <tr class="header">
-    <th>Dose Given</th>
-    <th>Fully Vaccinated</th>
-    <th>% Population</th>
+    <th>Bunny 1</th>
+    <th>Bunny 2</th>
   </tr>
   <tr class="number">
-    <td>2.77M</td>
-    <td>1.13M</td>
-    <td>31.6%</td>
+    <td>Name</td>
+    <td>Name</td>
   </tr>
 </table>
 
