--- a/ct.html
+++ b/ct.html
@@ -27,6 +27,18 @@
     <td>Name</td>
     <td>Name</td>
   </tr>
+  <tr class="num">
+    <td>Description</td>
+    <td>Description</td>
+  </tr>
+  <tr class="numb">
+    <td>Feed Me!!</td>
+    <td>Feed Me!!</td>
+  </tr>
+  <tr class="nu">
+    <td>I'm on medication</td>
+    <td>I'm on medication</td>
+  </tr>
 </table>
 
 
